kustomize/overlays/prod/deployment_patch.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ibms-deployment
  labels:
    app: ibms-prod
spec:
  selector:
    matchLabels:
      app: ibms-prod
  template:
    metadata:
      labels:
        app: ibms-prod
    spec:
      containers:
      - name: ibms
        image: ghcr.io/dbca-wa/ibms:2.8.1
        imagePullPolicy: IfNotPresent
