kustomize/overlays/prod/deployment_prod_patch.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ibms-deployment
  labels:
    app: ibms-prod
spec:
  selector:
    matchLabels:
      app: ibms-prod
  template:
    metadata:
      labels:
        app: ibms-prod
    spec:
      containers:
      - name: ibms
        imagePullPolicy: Always
