kustomize/overlays/prod/task_worker_patch.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ibms-task-worker
spec:
  template:
    spec:
      containers:
        - name: ibms-task-worker
          command: ['python']
          args: ['manage.py', 'db_worker']
