kustomize/overlays/prod/webserver_patch.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ibms-webserver
spec:
  template:
    spec:
      containers:
        - name: ibms
          imagePullPolicy: IfNotPresent
