kustomize/overlays/prod/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: ibms
spec:
  type: ClusterIP
  clusterIP: None
  ports:
  - name: default
    port: 42
    protocol: TCP
    targetPort: 42
  selector:
    app: ibms-prod
---
apiVersion: v1
kind: Service
metadata:
  name: ibms-clusterip
spec:
  type: ClusterIP
  ports:
  - name: wsgi
    port: 8080
    protocol: TCP
    targetPort: 8080
  selector:
    app: ibms-prod
