kustomize/overlays/prod/service_patch.yaml
apiVersion: v1
kind: Service
metadata:
  name: ibms-clusterip
spec:
  type: ClusterIP
  selector:
    app: ibms-prod
    variant: prod
