kustomize/overlays/prod/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ibms
  labels:
    app: ibms-prod
spec:
  ingressClassName: nginx
  rules:
  - host: ibms.dbca.wa.gov.au
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: ibms-clusterip-prod
            port:
              number: 8080
